feat: Disable cron for airgap instance which have external internet or cloud-services dependency  (#1252)
## Description

For air gap instances, public internet will be restricted and as a
result, cron jobs that depend on cloud-services won't be supported. This
PR adds a new env variable to define if the instance is airgapped and
also defines the config hierarchy for air-gap instances to selectively
execute the cron jobs.

Corresponding CE PR: https://github.com/appsmithorg/appsmith/pull/21884

Fixes https://github.com/appsmithorg/appsmith/issues/21522
https://github.com/appsmithorg/appsmith/issues/21521
https://github.com/appsmithorg/appsmith/issues/21882

## Type of change

- New feature (non-breaking change which adds functionality)

## How Has This Been Tested?

- Manual

## Checklist:
### Dev activity
- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [x] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [x] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit tests pass locally with my changes
- [ ] PR is being merged under a feature flag


### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relevant stakeholders after
Round 1/2 of QA
- [ ] Added Test Plan Approved label after reveiwing all Cypress test

--- a/app/server/appsmith-server/src/main/resources/application.properties
+++ b/app/server/appsmith-server/src/main/resources/application.properties
@@ -152,8 +152,7 @@ appsmith.oidc.jwt-signing-algo=${APPSMITH_OAUTH2_OIDC_SIGNING_ALGO:}
 appsmith.license.key=${APPSMITH_LICENSE_KEY:}
 # We are expecting Ed25519 128-bit Verify Key here
 keygen.license.verify.key=${KEYGEN_LICENSE_VERIFICATION_KEY:}
-is.air.gap.instance=${IS_AIR_GAP_INSTANCE:false}
-
+airgap.enabled=${APPSMITH_AIRGAP_ENABLED:false}
 
 # RTS port
 appsmith.rts.port=${APPSMITH_RTS_PORT:8091}
