--- a/app/client/package.json
+++ b/app/client/package.json
@@ -25,10 +25,10 @@
     "generate:widget": "plop --plopfile generators/index.js",
     "postinstall": "node cypress/apply-patches.js && yarn init-husky",
     "storybook": "yarn workspace @design-system/storybook storybook",
-    "lint:ci": "eslint --cache --ext .js,.ts,.tsx ./src && eslint --cache --ext .js,.ts ./cypress && yarn run lint:packages",
-    "lint:packages": "yarn workspaces foreach --exclude appsmith -pt run lint:ci",
-    "prettier:ci": "prettier --check ./src && prettier --check ./cypress && yarn run prettier:packages",
-    "prettier:packages": "yarn workspaces foreach --exclude appsmith -pt run prettier:ci",
+    "lint": "eslint --cache --ext .js,.ts,.tsx ./src && eslint --cache --ext .js,.ts ./cypress",
+    "lint:ci": "cd .. && yarn workspaces foreach -ptv run lint",
+    "prettier": "prettier --check ./src && prettier --check ./cypress",
+    "prettier:ci": "cd .. && yarn workspaces foreach -ptv run prettier",
     "check-types": "yarn tsc --noEmit",
     "init-husky": "cd ../.. && husky install app/client/.husky"
   },
