--- a/app/client/packages/design-system/headless/package.json
+++ b/app/client/packages/design-system/headless/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@react-aria/button": "^3.7.0",
+    "@react-aria/checkbox": "^3.9.0",
     "@react-aria/focus": "^3.11.0",
     "@react-aria/interactions": "^3.14.0",
-    "@react-aria/utils": "^3.15.0",
+    "@react-aria/utils": "^3.16.0",
     "@react-spectrum/utils": "^3.9.0",
+    "@react-stately/toggle": "^3.5.1",
     "@react-types/button": "^3.7.1",
+    "@react-types/checkbox": "^3.4.3",
     "@react-types/shared": "^3.17.0",
     "classnames": "*",
     "react": "*",
