--- a/.github/workflows/test-build-docker-image.yml
+++ b/.github/workflows/test-build-docker-image.yml
@@ -45,7 +45,7 @@ jobs:
     secrets: inherit
     with:
       pr: 0
-
+  
   perf-test:
     needs: [ build-docker-image ]
     # Only run if the build step is successful
@@ -56,8 +56,28 @@ jobs:
     with:
       pr: 0
 
-  ci-test:
+  smoke:
     needs: [ build-docker-image ]
+    # Only run if the build step is successful
+    if: success()
+    name: smoke-test
+    uses: ./.github/workflows/ci-smoke.yml
+    secrets: inherit
+    with:
+      pr: 0
+
+  sanity:
+    needs: [ smoke ]
+    # Only run if the build step is successful
+    if: success()
+    name: sanity-test
+    uses: ./.github/workflows/ci-sanity.yml
+    secrets: inherit
+    with:
+      pr: 0
+
+  ci-test:
+    needs: [ sanity ]
     # Only run if the build step is successful
     if: success()
     name: ci-test
