--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -294,7 +294,7 @@ jobs:
           parallel: true
           config-file: cypress_ci.json
           group: "Electrons on Github Action Fat Container"
-          spec: "cypress/integration/**/**/*"
+          spec: "cypress/integration/Regression_TestSuite/**/**/*"
           working-directory: app/client
           # tag will be either "push" or "pull_request"
           tag: ${{ github.event_name }}
