--- a/.github/workflows/test-build-docker-image.yml
+++ b/.github/workflows/test-build-docker-image.yml
@@ -60,7 +60,7 @@ jobs:
     needs: [ build-docker-image ]
     # Only run if the build step is successful
     if: success()
-    name: smoke-test
+    name: ci-test
     uses: ./.github/workflows/ci-smoke.yml
     secrets: inherit
     with:
@@ -70,7 +70,7 @@ jobs:
     needs: [ smoke ]
     # Only run if the build step is successful
     if: success()
-    name: sanity-test
+    name: ci-test
     uses: ./.github/workflows/ci-sanity.yml
     secrets: inherit
     with:
