--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Get the workflow run id
         id: workflow
         run: |
-          run = $('${{ steps.find-comment.outputs.comment-body }}' | sed -n 's/.*\/\([0-9]*\)_.*$/\1/p')
-          echo "run_id=$run" >> $GITHUB_OUTPUT
+          run_id = $(echo '${{ steps.find-comment.outputs.comment-body }}' | sed -n 's/.*\/\([0-9]*\)_.*$/\1/p')
+          echo "run_id=$run_id" >> $GITHUB_OUTPUT
       - run: |
           echo ${{ steps.workflow.outputs.run_id }}
