--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Get the workflow run id
         id: workflow
         run: |
-          echo "run_id=$(echo '${{ steps.find-comment.outputs.comment-body }}' | grep -Eo 'https://github[^ >]+'|awk -F/ '{print $8}'" >> $GITHUB_OUTPUT
+          echo "run_id=$(echo '${{ steps.find-comment.outputs.comment-body }}' | grep -o 'runs/[0-9]\+' | cut -d/ -f2" >> $GITHUB_OUTPUT
       - run: |
           echo ${{ steps.workflow.outputs.run_id }}
