--- a/.github/workflows/cleanup-dp.yml
+++ b/.github/workflows/cleanup-dp.yml
@@ -2,12 +2,8 @@ name: Cleanup Deploy Previews
 
 on:
   # This line enables manual triggering of this workflow.
-  workflow_dispatch:
-
-#on:
-#  # This line enables manual triggering of this workflow.
-#  schedule:
-#    - cron: 0 0 * * *
+  schedule:
+    - cron: 0 0 * * *
 
 jobs:
   execute:
