--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -50,19 +50,19 @@ jobs:
           echo ${{steps.pr.outputs.sha}}
 
       - name: get status-checks from pr
-        id: pr-status-check
+        id: pr_status_check
         run: |
-          status-link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{steps.pr.outputs.sha}}"
-          status-check=`curl --silent $status-link|jq -r '.[]'|jq -r 'select(.state | contains("pending")) | .context'`
-          echo "status=`echo $status-check|grep -v 'cypress\|Vercel\|DeepSource'|wc -l`" >> $GITHUB_OUTPUT
+          status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{steps.pr.outputs.sha}}"
+          status_check=`curl --silent "$status_link"|jq -r '.[]'|jq -r 'select(.state | contains("pending")) | .context'`
+          echo "status=`echo $status_check|grep -v 'cypress\|Vercel\|DeepSource'|wc -l`" >> $GITHUB_OUTPUT
       - run: |
-          echo ${{steps.pr-status-check.outputs.status}}
+          echo ${{steps.pr_status_check.outputs.status}}
 
       - name: get status-checks from check suite
-        id: suite-status-check
+        id: suite_status_check
         run: |
-          check-runs-link="https://api.github.com/repos/appsmithorg/appsmith/commits/${{steps.pr.outputs.sha}}/check-runs"
-          check-runs-status=`curl --silent $check-runs-link|jq -r '.check_runs[] | select(.conclusion | contains("success") | not ) | .name'`
-          echo "status=$check-runs-status" >> $GITHUB_OUTPUT
+          check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/${{steps.pr.outputs.sha}}/check-runs"
+          check_runs_status=`curl --silent "$check_runs_link"|jq -r '.check_runs[] | select(.conclusion | contains("success") | not ) | .name'`
+          echo "status=$check_runs_status" >> $GITHUB_OUTPUT
       - run: |
-          echo ${{steps.suite-status-check.outputs.status}}
+          echo ${{steps.suite_status_check.outputs.status}}
