--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           issue-number: 22062
           body-includes: 'Tests running at:'
+          author: github-actions[bot]
           direction: last
       
       - name: Get the workflow run_id
@@ -53,16 +54,23 @@ jobs:
         id: pr_status_check
         run: |
           status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{steps.pr.outputs.sha}}"
-          curl --silent "$status_link"|jq -r '.[]'|jq -r 'select(.state | contains("pending")) | .context' >> check1
-          echo "status=`grep -c -v 'cypress\|Vercel\|DeepSource' check1`" >> $GITHUB_OUTPUT
-      - run: |
-          echo ${{steps.pr_status_check.outputs.status}}
+          curl --silent "$status_link"|jq -r '.[]'|jq -r 'select(.state | contains("pending")) | .context' >> ~/check1
+          echo "status=`grep -c -v 'cypress\|Vercel\|DeepSource' ~/check1`" >> $GITHUB_OUTPUT
 
       - name: get status-checks from check suite
         id: suite_status_check
         run: |
           check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/${{steps.pr.outputs.sha}}/check-runs"
-          curl --silent "$check_runs_link"|jq -r '.check_runs[] | select(.conclusion | contains("success") | not ) | .name' >> check2
-          echo "status=`grep -c -E 'ci-test-result|Check for Test Plan Approved label' check2`" >> $GITHUB_OUTPUT
-      - run: |
-          echo ${{steps.suite_status_check.outputs.status}}
+          curl --silent "$check_runs_link"|jq -r '.check_runs[] | select(.conclusion | contains("success") | not ) | .name' >> ~/check2
+          echo "status=`grep -c -E 'ci-test-result|Check for Test Plan Approved label' ~/check2`" >> $GITHUB_OUTPUT
+
+      - name: Verify all the checks
+        run: |
+          status=0
+          if [ "${{ steps.ci-test-result-status.outputs.run_status }}" == "failed" ]; then
+            exit $status+1
+          elif [ "${{steps.pr_status_check.outputs.status}} != "0" ]; then
+            exit $status+${{steps.pr_status_check.outputs.status}}
+          elif [ "{{steps.suite_status_check.outputs.status}} != "0" ]; then
+            exit $status+`grep -q -v 'ci-test-result' ~/check2`
+          fi
