--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -68,9 +68,9 @@ jobs:
         run: |
           status=0
           if [ "${{ steps.ci-test-result-status.outputs.run_status }}" == "failed" ]; then
-            exit $status+1
+            exit $((status+1))
           elif [ "${{steps.pr_status_check.outputs.status}} != "0" ]; then
-            exit $status+${{steps.pr_status_check.outputs.status}}
-          elif [ "{{steps.suite_status_check.outputs.status}} != "0" ]; then
-            exit $status+`grep -q -v 'ci-test-result' ~/check2`
+            exit $((status+${{steps.pr_status_check.outputs.status}}))
+          elif [ "${{steps.suite_status_check.outputs.status}} != "0" ]; then
+            exit $((status+`grep -q -v 'ci-test-result' ~/check2`))
           fi
