--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -38,7 +38,7 @@ jobs:
         id: ci-test-result-status
         run: |
           run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100|jq -r '[ .jobs[] | select(.name | contains("ci-test-result")) | .conclusion ]'|grep -v  '\[\|\]'|sed "s/\"//g"|sed "s/ //g"`
-          echo "run_status= $run_status" >> $GITHUB_OUTPUT
+          echo "run_status=$run_status" >> $GITHUB_OUTPUT
 
       - run: |
           echo ${{ steps.ci-test-result-status.outputs.run_status }}
@@ -69,8 +69,8 @@ jobs:
           status=0
           if [ "${{ steps.ci-test-result-status.outputs.run_status }}" == "failed" ]; then
             exit $((status+1))
-          elif [ "${{steps.pr_status_check.outputs.status}} != "0" ]; then
+          elif [ ${{steps.pr_status_check.outputs.status}} != 0 ]; then
             exit $((status+${{steps.pr_status_check.outputs.status}}))
-          elif [ "${{steps.suite_status_check.outputs.status}} != "0" ]; then
+          elif [ ${{steps.suite_status_check.outputs.status}} != 0 ]; then
             exit $((status+`grep -q -v 'ci-test-result' ~/check2`))
           fi
