--- a/.github/workflows/cleanup-dp.yml
+++ b/.github/workflows/cleanup-dp.yml
@@ -1,8 +1,10 @@
 name: Cleanup Deploy Previews
 
 on:
-  schedule:
-    - cron: 0 0 * * *
+  workflow_dispatch:
+#on:
+#  schedule:
+#    - cron: 0 0 * * *
 
 jobs:
   execute:
