--- a/.github/workflows/cleanup-dp.yml
+++ b/.github/workflows/cleanup-dp.yml
@@ -1,10 +1,8 @@
 name: Cleanup Deploy Previews
 
 on:
-  workflow_dispatch:
-#on:
-#  schedule:
-#    - cron: 0 0 * * *
+  schedule:
+    - cron: 0 0 * * *
 
 jobs:
   execute:
