--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -39,9 +39,7 @@ jobs:
         run: |
           run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100|jq -r '[ .jobs[] | select(.name | contains("ci-test-result")) | .conclusion ]'|grep -v  '\[\|\]'|sed "s/\"//g"|sed "s/ //g"`
           echo "run_status=$run_status" >> $GITHUB_OUTPUT
-
-      - run: |
-          echo ${{ steps.ci-test-result-status.outputs.run_status }}
+          echo "run_status1=success" >> $GITHUB_OUTPUT
 
       - name: Print Head SHA
         id: pr
@@ -56,6 +54,7 @@ jobs:
           status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{steps.pr.outputs.sha}}"
           curl --silent "$status_link"|jq -r '.[]'|jq -r 'select(.state | contains("pending")) | .context' >> ~/check1
           echo "status=`grep -c -v 'cypress\|Vercel\|DeepSource' ~/check1`" >> $GITHUB_OUTPUT
+          echo "status1=0" >> $GITHUB_OUTPUT
 
       - name: get status-checks from check suite
         id: suite_status_check
@@ -63,14 +62,15 @@ jobs:
           check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/${{steps.pr.outputs.sha}}/check-runs"
           curl --silent "$check_runs_link"|jq -r '.check_runs[] | select(.conclusion | contains("success") | not ) | .name' >> ~/check2
           echo "status=`grep -c -E 'ci-test-result|Check for Test Plan Approved label' ~/check2`" >> $GITHUB_OUTPUT
+          echo "status1=0" >> $GITHUB_OUTPUT
 
       - name: Verify all the checks
         run: |
           status=0
-          if [ "${{ steps.ci-test-result-status.outputs.run_status }}" == "failure" ]; then
+          if [ "${{ steps.ci-test-result-status.outputs.run_status1 }}" == "failure" ]; then
             exit $((status+1))
-          elif [ ${{steps.pr_status_check.outputs.status}} != 0 ]; then
+          elif [ ${{steps.pr_status_check.outputs.status1}} != 0 ]; then
             exit $((status+${{steps.pr_status_check.outputs.status}}))
-          elif [ ${{steps.suite_status_check.outputs.status}} != 0 ]; then
+          elif [ ${{steps.suite_status_check.outputs.status1}} != 0 ]; then
             exit $((status+`grep -q -v 'ci-test-result' ~/check2`))
           fi
