updated the logic to test

--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -71,7 +71,7 @@ jobs:
           elif [ ${{steps.pr_status_check.outputs.status1}} != 0 ]; then
             exit 1
           elif [ ${{steps.suite_status_check.outputs.status1}} != 0 ]; then
-            if [ grep -c -v 'ci-test-result' ~/check2 != 0 ]; then
+            if [ $(grep -c -v 'ci-test-result' ~/check2) != 0 ]; then
               exit 1
             else
               exit 0
